k8s/notifications-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: notifications-api
spec:
  replicas: 2
  selector:
    matchLabels:
      component: notifications-api
    
  template:
    metadata:
      labels:
        component: notifications-api
    spec:
      containers:
        - name: notifications-api
          image: laithharb/notifications-api:v2
          ports:
            - containerPort: 5001
          # env:
          #   - name: TWILIO_ACCOUNT_SID 
          #     value: AC72682e7d8ed1aa74673e68f5ae9e8557
          #   - name: TWILIO_AUTH_TOKEN 
          #     value: 765a55f04e8b9e705642e2f1615ac61d
          #   - name: TWILIO_NUMBER
          #     value: "+18573714765"
