k8s/rabbitmq-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: rabbitmq

spec:
  replicas: 1
  selector:
    matchLabels:
      component: rabbitmq
  
  template:
    metadata:
      labels:
        component: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq
          ports:
            - containerPort: 5672 # rabbitmq default port
