k8s/store-deployment.yaml
# apiVersion: v1
# kind: pod
# metadata:
#   name: store-app
#   labels:
#     component: store-app
# spec:
#   containers:
#     - name: store
#       image: laithharb/store # You can create your own image using your docker hub account
#       ports:
#         - containerPort: 80


# cd to k8s dkrectory and ls (your yaml file is living)
# Feed your yaml file to the master node through kube-apiserver using the following commands(Running our pod)
# kubectl apply -f store-pod.yaml
# Result says: pod/store-app created
# To view your running pods: kubectl get pods
# To access your pod on the localhost, browse (localhosst:80, it is not working. why?)
# Ans: create a "store-node-port-service.yaml" file inside the k8s directory

apiVersion: apps/v1
kind: Deployment 
metadata:
  name: store
spec:
  replicas: 3
  selector:
    matchLabels:
      component: store
    
  template: # We are defining the pod that the deployment object manages
    metadata:
      labels:
        component: store
    spec:
      containers:
        - name: store 
          image: laithharb/store-app
          ports:
            - containerPort: 80
