k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: ingress-service 
  annotations:
    #kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: store-cluster-ip-service
                port:
                  number: 80 
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: products-api-cluster-ip-service
                port:
                  number: 5002
